<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/characters"
        android:enabled="true"
        android:icon="@drawable/characters"
        android:title="@string/characters" />
    <item
        android:id="@+id/locations"
        android:enabled="true"
        android:icon="@drawable/locations"
        android:title="@string/locations" />
    <item
        android:id="@+id/favorites"
        android:enabled="false"
        android:title="@null" />
    <item
        android:id="@+id/statistics"
        android:enabled="true"
        android:icon="@drawable/statistics"
        android:title="@string/statistics" />
    <item
        android:id="@+id/episodes"
        android:enabled="true"
        android:icon="@drawable/episodes"
        android:title="@string/episodes" />
</menu>