<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Earth (Replacement Dimension)" />

        <TextView
            android:id="@+id/favoriteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="12dp"
            app:drawableStartCompat="@drawable/not_favorite_icon"
            android:drawablePadding="6dp"
            android:text="@string/addToFavs"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/typeKey"
            style="@style/characterDetailsPairs"
            android:layout_marginTop="24dp"
            android:text="@string/typeKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteDescription" />

        <TextView
            android:id="@+id/typeValue"
            style="@style/characterDetailsPairs.Values"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/typeKey"
            app:layout_constraintTop_toBottomOf="@+id/favoriteDescription"
            tools:text="Replaced" />

        <TextView
            android:id="@+id/dimensionKey"
            style="@style/characterDetailsPairs"
            android:text="@string/dimensionKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeKey" />

        <TextView
            android:id="@+id/dimensionValue"
            style="@style/characterDetailsPairs.Values"
            app:layout_constraintStart_toEndOf="@+id/dimensionKey"
            app:layout_constraintTop_toBottomOf="@+id/typeValue"
            tools:text="C-137" />

        <TextView
            android:id="@+id/dateKey"
            style="@style/characterDetailsPairs"
            android:text="@string/dateKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dimensionKey" />

        <TextView
            android:id="@+id/dateValue"
            style="@style/characterDetailsPairs.Values"
            app:layout_constraintStart_toEndOf="@id/dateKey"
            app:layout_constraintTop_toBottomOf="@+id/dimensionValue"
            tools:text="25.10.2018" />

        <TextView
            android:id="@+id/characterInLocationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/charactersInLocationHeader"
            android:textSize="@dimen/items_small_text_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateValue"
            tools:ignore="SmallSp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/list_fragment_bottom_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/characterInLocationHeader"
            tools:listitem="@layout/item_character_arrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>