<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:src="@drawable/image_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Unmuscular Michael" />

        <TextView
            android:id="@+id/favoriteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            app:drawableStartCompat="@drawable/not_favorite_icon"
            android:drawablePadding="6dp"
            android:text="@string/addToFavs"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/statusKey"
            style="@style/characterDetailsPairs"
            android:layout_marginTop="24dp"
            android:text="@string/statusKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteDescription" />

        <ImageView
            android:id="@+id/statusPoint"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/full_circle"
            app:layout_constraintStart_toEndOf="@+id/statusKey"
            app:layout_constraintTop_toTopOf="@+id/statusDescription"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/statusDescription"
            style="@style/characterDetailsPairs.Values"
            android:layout_marginTop="24dp"
            android:textColor="@color/light_grey"
            app:layout_constraintStart_toEndOf="@+id/statusPoint"
            app:layout_constraintTop_toBottomOf="@+id/favoriteDescription"
            tools:text="Unknown" />

        <TextView
            android:id="@+id/typeKey"
            style="@style/characterDetailsPairs"
            android:text="@string/typeKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusKey" />

        <TextView
            android:id="@+id/typeValue"
            style="@style/characterDetailsPairs.Values"
            app:layout_constraintStart_toEndOf="@+id/typeKey"
            app:layout_constraintTop_toBottomOf="@+id/statusDescription"
            tools:text="Mythological Creature" />

        <TextView
            android:id="@+id/genderKey"
            style="@style/characterDetailsPairs"
            android:text="@string/genderKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeKey" />

        <TextView
            android:id="@+id/genderValue"
            style="@style/characterDetailsPairs.Values"
            app:layout_constraintStart_toEndOf="@+id/genderKey"
            app:layout_constraintTop_toBottomOf="@+id/typeValue"
            tools:text="Female" />

        <TextView
            android:id="@+id/dateKey"
            style="@style/characterDetailsPairs"
            android:text="@string/dateKey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderKey" />

        <TextView
            android:id="@+id/dateValue"
            style="@style/characterDetailsPairs.Values"
            app:layout_constraintStart_toEndOf="@id/dateKey"
            app:layout_constraintTop_toBottomOf="@+id/genderValue"
            tools:text="25.10.2018" />

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/bright_yellow"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="22dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dateKey">

            <TextView
                android:id="@+id/locationValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:drawablePadding="10dp"
                app:drawableTint="@color/black"
                app:drawableStartCompat="@drawable/locations"
                tools:text="Earth (Replacement Dimension)" />

            <ImageView
                android:id="@+id/upIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:src="@drawable/up"
                app:tint="@color/blue"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/similarHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/similarCharactersHeader"
            android:textSize="@dimen/items_small_text_sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLayout"
            tools:ignore="SmallSp"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarCharactersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/similarHeader"
            tools:listitem="@layout/similar_character_card"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/episodesHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episodesHeader"
            android:textSize="@dimen/items_small_text_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/similarCharactersRecyclerView"
            app:layout_goneMarginTop="16dp"
            tools:ignore="SmallSp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/list_fragment_bottom_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/episodesHeader"
            tools:listitem="@layout/item_episode_character" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>